--- a/RMDataManager.Library/RMDataManager.Library.csproj
+++ b/RMDataManager.Library/RMDataManager.Library.csproj
@@ -46,8 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Internal\DataAccess\ProductData.cs" />
-    <Compile Include="Internal\Models\ProductModel.cs" />
-    <Compile Include="Internal\Models\UserModel.cs" />
+    <Compile Include="Models\ProductModel.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Internal\DataAccess\SqlDataAccess.cs" />
     <Compile Include="DataAccess\UserData.cs" />
