--- a/RMDataManager.Library/RMDataManager.Library.csproj
+++ b/RMDataManager.Library/RMDataManager.Library.csproj
@@ -47,7 +47,12 @@
   <ItemGroup>
     <Compile Include="ConfigHelper.cs" />
     <Compile Include="Internal\DataAccess\ProductData.cs" />
+    <Compile Include="Internal\DataAccess\SaleData.cs" />
     <Compile Include="Models\ProductModel.cs" />
+    <Compile Include="Models\SaleDBModel.cs" />
+    <Compile Include="Models\SaleDetailDBModel.cs" />
+    <Compile Include="Models\SaleDetailModel.cs" />
+    <Compile Include="Models\SaleModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Internal\DataAccess\SqlDataAccess.cs" />
