--- a/RMDataManager.Library/RMDataManager.Library.csproj
+++ b/RMDataManager.Library/RMDataManager.Library.csproj
@@ -46,13 +46,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigHelper.cs" />
+    <Compile Include="Internal\DataAccess\InventoryData.cs" />
     <Compile Include="Internal\DataAccess\ProductData.cs" />
     <Compile Include="Internal\DataAccess\SaleData.cs" />
+    <Compile Include="Models\InventoryModel.cs" />
     <Compile Include="Models\ProductModel.cs" />
     <Compile Include="Models\SaleDBModel.cs" />
     <Compile Include="Models\SaleDetailDBModel.cs" />
     <Compile Include="Models\SaleDetailModel.cs" />
     <Compile Include="Models\SaleModel.cs" />
+    <Compile Include="Models\SaleReportModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Internal\DataAccess\SqlDataAccess.cs" />
